# monte-carlo-finance-sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: monte_carlo_simulation.h  payoff.h  payoff_decorator.h  payoff_factory.h  statistical_strategy.h  thread_pool.h
src/: main.cpp  monte_carlo_simulation.cpp  payoff.cpp  payoff_factory.cpp  statistical_strategy.cpp
tests/: test_monte_carlo_simulation.cpp  test_payoff.cpp  test_payoff_factory.cpp  test_thread_pool.cpp
